--- a/css/estilos_adicionales.css
+++ b/css/estilos_adicionales.css
@@ -31,7 +31,6 @@ body {
 
 /* ESTILOS DE CABECERA PRINCIPAL*/
 .main-header{
-    background-color: blue;
     background-color: var(--color-secundario);
     color: var(--color-fondo);
     display: flex;
@@ -40,7 +39,8 @@ body {
     padding: 0 20px;
 }
 .main-header h1 {
-    /* color: var(--color-fondo); */
+    color: var(--color-fondo);
+    font-weight: 600;
     order: 2;
     white-space: nowrap;
     text-align: center;
@@ -50,7 +50,7 @@ body {
     height: 100%;
     order: 1;
     margin-right: auto;
-    padding: 10px 0;
+    padding: 15px 0;
     cursor: pointer;
 }
 .main-header .notifications {
@@ -59,6 +59,8 @@ body {
     justify-content: center;
     margin-left: auto;
     cursor: pointer;
+    /* width: 80px; */
+    /* margin: 20px; */
 }
 
 /* ESTILOS DE BARRA DE NAVEGACIÓN */
@@ -165,7 +167,7 @@ main {
     padding-top: 20px;
 }
 .exclusive-offers h2 {
-    text-align: center;
+    text-align: left;
     font-size: 2em; 
     font-weight: bold; 
     margin-bottom: 20px; 
